; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_zip.c_mz_zip_dosdate_to_raw_tm.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_zip.c_mz_zip_dosdate_to_raw_tm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i8*, i8*, i8*, i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.tm*)* @mz_zip_dosdate_to_raw_tm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mz_zip_dosdate_to_raw_tm(i32 %0, %struct.tm* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tm*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.tm* %1, %struct.tm** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = ashr i32 %6, 16
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = and i32 %8, 31
  %10 = sext i32 %9 to i64
  %11 = inttoptr i64 %10 to i8*
  %12 = load %struct.tm*, %struct.tm** %4, align 8
  %13 = getelementptr inbounds %struct.tm, %struct.tm* %12, i32 0, i32 6
  store i8* %11, i8** %13, align 8
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, 480
  %16 = sdiv i32 %15, 32
  %17 = sub nsw i32 %16, 1
  %18 = sext i32 %17 to i64
  %19 = inttoptr i64 %18 to i8*
  %20 = load %struct.tm*, %struct.tm** %4, align 8
  %21 = getelementptr inbounds %struct.tm, %struct.tm* %20, i32 0, i32 5
  store i8* %19, i8** %21, align 8
  %22 = load i32, i32* %5, align 4
  %23 = and i32 %22, 65024
  %24 = sdiv i32 %23, 512
  %25 = add nsw i32 %24, 80
  %26 = sext i32 %25 to i64
  %27 = inttoptr i64 %26 to i8*
  %28 = load %struct.tm*, %struct.tm** %4, align 8
  %29 = getelementptr inbounds %struct.tm, %struct.tm* %28, i32 0, i32 4
  store i8* %27, i8** %29, align 8
  %30 = load i32, i32* %3, align 4
  %31 = and i32 %30, 63488
  %32 = sdiv i32 %31, 2048
  %33 = sext i32 %32 to i64
  %34 = inttoptr i64 %33 to i8*
  %35 = load %struct.tm*, %struct.tm** %4, align 8
  %36 = getelementptr inbounds %struct.tm, %struct.tm* %35, i32 0, i32 3
  store i8* %34, i8** %36, align 8
  %37 = load i32, i32* %3, align 4
  %38 = and i32 %37, 2016
  %39 = sdiv i32 %38, 32
  %40 = sext i32 %39 to i64
  %41 = inttoptr i64 %40 to i8*
  %42 = load %struct.tm*, %struct.tm** %4, align 8
  %43 = getelementptr inbounds %struct.tm, %struct.tm* %42, i32 0, i32 2
  store i8* %41, i8** %43, align 8
  %44 = load i32, i32* %3, align 4
  %45 = and i32 %44, 31
  %46 = mul nsw i32 2, %45
  %47 = sext i32 %46 to i64
  %48 = inttoptr i64 %47 to i8*
  %49 = load %struct.tm*, %struct.tm** %4, align 8
  %50 = getelementptr inbounds %struct.tm, %struct.tm* %49, i32 0, i32 1
  store i8* %48, i8** %50, align 8
  %51 = load %struct.tm*, %struct.tm** %4, align 8
  %52 = getelementptr inbounds %struct.tm, %struct.tm* %51, i32 0, i32 0
  store i32 -1, i32* %52, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
